# nyc-taxi-demand

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml  train.yml
docker/: README.md  api.Dockerfile  training.Dockerfile  ui.Dockerfile
docs/: README.md  build-plan.md  dependency-pins.md  leakage.md  model-search.md  train-serve-consistency.md
flows/: training_flow.py
k8s/: README.md  api-deployment.yaml  ingress.yaml  serviceaccount.yaml  ui-deployment.yaml
src/nyc_taxi_demand/: __init__.py  cli.py
src/nyc_taxi_demand/common/: __init__.py  config.py  mlflow_utils.py  s3.py
src/nyc_taxi_demand/data/: __init__.py  loader.py  snapshot.py  split.py
src/nyc_taxi_demand/features/: __init__.py  transform.py
src/nyc_taxi_demand/inference/: __init__.py  batch.py
src/nyc_taxi_demand/monitoring/: __init__.py  drift.py
src/nyc_taxi_demand/registry/: __init__.py  promote.py
src/nyc_taxi_demand/serving/: schemas.py
src/nyc_taxi_demand/serving/api/: main.py
src/nyc_taxi_demand/serving/ui/: app.py  zones.py
src/nyc_taxi_demand/training/: __init__.py  algorithms.py  evaluate.py  train.py  tuning.py
terraform/: README.md
terraform/ephemeral/: backend.tf  batch.tf  eks.tf  iam.tf  outputs.tf  variables.tf
terraform/persistent/: backend.tf  main.tf  outputs.tf  variables.tf
tests/: conftest.py  test_algorithms.py  test_data_loading.py  test_features.py  test_s3_moto.py  test_train_serve_consistency.py
